[gd_scene load_steps=3 format=3 uid="uid://nqe4jke58msw"]

[ext_resource type="Script" uid="uid://dddhuayk7i5u3" path="res://script/apphouse_scene.gd" id="1_6e5u1"]
[ext_resource type="Texture2D" uid="uid://bg8h1k8cqpl2j" path="res://assets/renthouse.png" id="1_ptbwp"]

[node name="ApphouseScene" type="Node2D"]
script = ExtResource("1_6e5u1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1096.5, 364)
scale = Vector2(0.916084, 0.843931)
texture = ExtResource("1_ptbwp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 950.0
offset_top = 117.0
offset_right = 1242.0
offset_bottom = 237.0

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 950.0
offset_top = 469.0
offset_right = 1242.0
offset_bottom = 589.0

[node name="Button3" type="Button" parent="CanvasLayer"]
offset_left = 948.0
offset_top = 306.0
offset_right = 1240.0
offset_bottom = 426.0

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 1096.0
offset_top = 238.0
offset_right = 1238.0
offset_bottom = 268.0
text = "5000"

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 1097.0
offset_top = 411.0
offset_right = 1236.0
offset_bottom = 441.0
text = "2000"

[node name="Label3" type="Label" parent="CanvasLayer"]
offset_left = 1100.0
offset_top = 588.0
offset_right = 1263.0
offset_bottom = 611.0
text = "500"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "确认选择"
position = Vector2i(950, 300)
size = Vector2i(300, 150)

[node name="Label" type="Label" parent="AcceptDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 101.0
text = "确定要选择这个吗"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
